// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon > HelpPopupIcon.vue should render HelpPopupIcon 1`] = `
<i class="oxd-svg-icon oxd-svg-icon--small" help-tooltip="Test help" position="bottom-right"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve">
    <g>
      <path style="fill:currentColor" d="M256,0C115.391,0,0.002,115.389,0.002,255.998c0,45.747,12.378,90.526,35.859,130.004L0.778,492.25
      c-1.802,5.391-0.396,11.338,3.618,15.352c4.043,4.043,10.031,5.425,15.352,3.618l106.248-35.083
      c39.478,23.481,84.257,35.859,130.004,35.859c140.609,0,255.998-115.389,255.998-255.998S396.609,0,256,0z M256,450.996
      c-24.814,0-45-20.186-45-45c0-24.814,20.186-45,45-45s45,20.186,45,45C301,430.811,280.814,450.996,256,450.996z M319.237,235.183
      L286,268.42v32.578c0,16.538-13.462,30-30,30s-30-13.462-30-30V268.42c0-16.025,6.24-31.084,17.578-42.422l33.237-33.237
      c7.683-7.683,9.185-15.463,9.185-25.386c0-17.3-14.077-31.377-31.377-31.377c-15.776,0-28.623,12.847-28.623,28.623
      c0,16.538-13.462,30-30,30c-16.538,0-30-13.462-30-30c0-48.867,39.756-88.622,88.622-88.622c50.391,0,91.376,40.986,91.376,91.376
      C345.999,195.725,336.724,217.696,319.237,235.183z"></path>
    </g>
  </svg></i>
`;

exports[`Icon > HelpPopupIcon.vue should render HelpPopupIcon with custom position 1`] = `
<i class="oxd-svg-icon oxd-svg-icon--small" help-tooltip="Test help" position="top_left"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve">
    <g>
      <path style="fill:currentColor" d="M256,0C115.391,0,0.002,115.389,0.002,255.998c0,45.747,12.378,90.526,35.859,130.004L0.778,492.25
      c-1.802,5.391-0.396,11.338,3.618,15.352c4.043,4.043,10.031,5.425,15.352,3.618l106.248-35.083
      c39.478,23.481,84.257,35.859,130.004,35.859c140.609,0,255.998-115.389,255.998-255.998S396.609,0,256,0z M256,450.996
      c-24.814,0-45-20.186-45-45c0-24.814,20.186-45,45-45s45,20.186,45,45C301,430.811,280.814,450.996,256,450.996z M319.237,235.183
      L286,268.42v32.578c0,16.538-13.462,30-30,30s-30-13.462-30-30V268.42c0-16.025,6.24-31.084,17.578-42.422l33.237-33.237
      c7.683-7.683,9.185-15.463,9.185-25.386c0-17.3-14.077-31.377-31.377-31.377c-15.776,0-28.623,12.847-28.623,28.623
      c0,16.538-13.462,30-30,30c-16.538,0-30-13.462-30-30c0-48.867,39.756-88.622,88.622-88.622c50.391,0,91.376,40.986,91.376,91.376
      C345.999,195.725,336.724,217.696,319.237,235.183z"></path>
    </g>
  </svg></i>
`;
